# computer_vision_notebook

./: .gitignore
adaptive_thresholding/cpp/: CMakeLists.txt  adaptive_thresholding.cpp
aprilTag/python/: detect_apriltag.py
automatic_color_correction/python/: color_correction.py
automatically_detecting_aruco_marker_type/cpp/: CMakeLists.txt  automatically_detecting_aruco_video.cpp  guess_aruco_type.cpp
basic_thresholding/cpp/: CMakeLists.txt  otsu_thresholding.cpp  simple_thresholding.cpp
camera_calibration/cpp/: CMakeLists.txt  camera_calibration.cpp
color_spaces/cpp/: CMakeLists.txt  color_spaces.cpp
deep_learning/image_classification_pretrained/: classify_image.py
deep_learning/image_classification_pretrained/pyimagesearch/: config.py
deep_learning/intro-to-pytorch/: train.py
deep_learning/intro-to-pytorch/pyimagesearch/: mlp.py
deep_learning/pytorch-cnn/: predict.py  train.py
deep_learning/pytorch-cnn/output/: model.pth
deep_learning/pytorch-cnn/pyimagesearch/: lenet.py
detecting_aruco_markers/cpp/: CMakeLists.txt  detect_aruco_image.cpp  detect_aruco_video.cpp
edge_detection_canny/cpp/: CMakeLists.txt  edge_detection.cpp
gamma_correction/python/: adjust_gamma.py
generating_aruco_markers/cpp/: CMakeLists.txt  generating_aruco.cpp
histogram_equalization/cpp/: CMakeLists.txt  histogram_adaptive_eq.cpp  histogram_equalization.cpp
histogram_matching/python/: match_histograms.py
image_gradients/cpp/: CMakeLists.txt  sobel_scharr.cpp
image_histograms/python/: color_histograms.py  grayscale_histogram.py
kernels/cpp/: CMakeLists.txt  kernel.cpp
knn_classifier/python/: knn.py
knn_classifier/python/pyimagesearch/datasets/: simpledatasetloader.py
morphological-operations/cpp/: CMakeLists.txt  morphological_hats.cpp  morphological_ops.cpp
opencv-bitwise/: opencv_bitwise.py
opencv-cropping/: opencv_crop.py
opencv-flipping/.spyproject/config/: workspace.ini
opencv-image-arithmetic/: image_arithmetic.py
opencv-masking/: opencv_masking.py
opencv-resizing/: opencv_resize.py
opencv-resizing/.spyproject/config/backups/: workspace.ini.bak
opencv-rotate/: opencv_rotate.py  replicating.py
opencv-rotate/.spyproject/config/: workspace.ini
smoothing_and_blurring/cpp/: CMakeLists.txt  bilateral.cpp  blurring.cpp
